# pebble-strength

./: .gitignore  DEPLOY.md  HANDOFF.md  README.md  SPEC.md  package.json
deploy/: pebblestrength.apache.conf
docs/: mac-handoff-screenshots.md
docs/design/: rep-counter-data-driven.md
docs/promo/: README.md
server/: .env.example  Cargo.toml
server/migrations/2026-07-18-000001_init/: down.sql  up.sql
server/migrations/2026-07-19-000001_recordings/: up.sql
server/migrations/2026-07-21-000001_sessions/: down.sql  up.sql
server/migrations/2026-07-21-000002_dashboard/: down.sql  up.sql
server/migrations/2026-07-23-000001_exercise_catalog/: down.sql  up.sql
server/migrations/2026-07-23-000002_session_client_id/: down.sql  up.sql
server/src/: api.rs  auth.rs  dashboard.rs  db.rs  device.rs  error.rs  main.rs  models.rs  pack.rs  pages.rs  sample.rs  schema.rs  seed.rs  sessions.rs  stats.rs  workouts.rs
server/templates/: base.html  builder.html  dashboard.html  devices.html  exercises.html  landing.html  privacy.html  recordings.html  session.html  sessions.html  stats.html  terms.html  watch_config.html  workout_view.html  workouts.html
shared/: exercises.json
src/c/: counters.h  counters_store.c  counters_store.h  embedded_workouts.h  movements.h  packfmt.c  packfmt.h  recorder.c  recorder.h  rep_counter.c  rep_counter.h  session_queue.c  session_queue.h  strength.c  ui_preview.c  ui_preview.h  (+4 more)
tools/: gen_counters.py  gen_embedded.py  gen_movements.py  pushup_count.py  rep_causal.py  rep_ctest.c  replay.py  segment.py  verify_rep_counter.py
(+1 files in other folders)
